fix from align items start to flex-start

--- a/src/styles/GridList.css
+++ b/src/styles/GridList.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: start;
+    align-items: flex-start;
     text-align: start;
     width: 100%;
     height: 100%;
@@ -43,7 +43,7 @@
 
 .grid-list__title-s {
     margin: 0 0 12px 0;
-    text-align: start;
+    text-align: flex-start;
     color: #969696;
     font-weight: 600;
     font-size: 14px;
